--- a/src/main/resources/assets/mousewheelie/lang/en_us.json
+++ b/src/main/resources/assets/mousewheelie/lang/en_us.json
@@ -86,6 +86,8 @@
     "tweed4_tailor_screen.screen.mousewheelie.refill.drop.description": "Refill when dropping stacks from the hotbar.",
     "tweed4_tailor_screen.screen.mousewheelie.refill.use": "Refill when using items",
     "tweed4_tailor_screen.screen.mousewheelie.refill.use.description": "Refill when using up items, like tools or weapons.",
+    "tweed4_tailor_screen.screen.mousewheelie.refill.ignoreBuckets": "Do not refill buckets",
+    "tweed4_tailor_screen.screen.mousewheelie.refill.ignoreBuckets.description": "Restore sanity to the world. Your buckets will not be refilled.",
     "tweed4_tailor_screen.screen.mousewheelie.refill.other": "Refill on other occasions",
     "tweed4_tailor_screen.screen.mousewheelie.refill.other.description": "Refill on other occasions.",
     "tweed4_tailor_screen.screen.mousewheelie.refill.rules": "Refill rules",
